[B]2.2.2[/B]
. Fix unclosed opened CSV and NFO files.
. Fix negative handle problem.
. Fix TheGameDB cached thumbs images display list.

[B]2.2.1[/B]
. Fix XBMC notification display bugs.

[B]2.2.0[/B]
. Fix XBMC notification icon display.
. Rewrite launchers.xml load/save functions.
. Code cleaning.
. Change python dependence to version 2.1.

[B]2.1.0[/B]
. Add an option to directly open Advanced Launcher into default category.
. Update launchers.xml file format.
. Update french translation.

[B]2.0.15[/B]
. Update German translation (thanks to mbroemme).

[B]2.0.14[/B]
. Fix GameFAQs scrapers (gamesystem list update).
. Remove MobyGames scraper (until it will work correctly).

[B]2.0.13[/B]
. Fix TheGameDB scrapers (info, thumbs and fanarts).

[B]2.0.12[/B]
. Fix images download bug into automatic scan mode.
. Improve download image algorithm.

[B]2.0.11[/B]
. Fix TheGameDB scrapers (info, thumbs and fanarts).
. Change download image runtime.

[B]2.0.10[/B]
. Fix GameFAQs scrapers (info, thumbs and fanarts).
. Fix post-Frodo XBMC versions compatibility.
. Fix toogle fullscreen option for files launchers.

[B]2.0.9[/B]
. Restore post-Frodo XBMC versions compatibility.

[B]2.0.8[/B]
. Fix non-existing category bug.
. Add empty launcher display message.
. Add file/directory path not exist error messages.

[B]2.0.7[/B]
. Fix No fanart message display.
. Fix change category display.

[B]2.0.6[/B]
. Fix audio sound loop when starting an application.

[B]2.0.5[/B]
. Fix AudioEngine hog (thanks to fritsch and Nortin).

[B]2.0.4[/B]
. Fix ComicVine scraper.

[B]2.0.3[/B]
. Fix category assignment for files launcher creation.

[B]2.0.2[/B]
. Add alternative application option for each items.
. Add alternative argument option for each items. 

[B]2.0.1[/B]
. Fix caterory creation bug.

[B]2.0.0[/B]
. Add category parameter to launchers.
. Add option to show"hide the default category.
. Add category title, genre, description modification option.