@@ -120,8 +120,8 @@
 "Sega CD",36,65,20,"Sega CD"
 "Sega Game Gear",25,62,25,"Sega Game Gear"
 "Sega Genesis",24,54,16,"Sega Genesis"
-"Sega Genesis 32",35,,,
-"Sega Genesis 32X CD",43,74,21,"Sega 32X"
+"Sega Genesis 32X",35,74,21,"Sega 32X"
+"Sega Genesis 32X CD",43,,,
 "Sega Genesis CDX",17675,,,
 "Sega Genesis Nomad",17671,,,
 "Sega Master System",23,49,26,"Sega Master System"
